# uv-dep-repro

./: pyproject.toml
